# TDCF

./: CMakeLists.txt  README.md
cmake_config/: cmake_uninstall.cmake.in  tdcfConfig.cmake.in
doc/: 使用流程说明.md  数据操作.md  测试说明.md
doc/frame/: Communicator.md  Data.md  Identity.md  ProcessingRules.md  Processor.md
simulation/: Process.hpp  Thread.hpp
tdcf/: CMakeLists.txt
tdcf/base/: Errors.hpp  Marcos.hpp  MetaData.hpp  NoCopy.hpp  PlainAny.hpp  Serializable.hpp  Types.hpp  Version.hpp
tdcf/base/DBT/: DBT.hpp
tdcf/base/types/: DBT.hpp  Ring.hpp  Star.hpp
tdcf/cluster/: Cluster.cpp  Cluster.hpp  StarCluster.cpp  StarCluster.hpp
tdcf/cluster/DBT/: AllReduce.cpp  Broadcast.cpp  DBTCluster.cpp  DBTCluster.hpp  Reduce.cpp  ReduceScatter.cpp  Scatter.cpp
tdcf/cluster/ring/: AllReduce.cpp  Broadcast.cpp  Reduce.cpp  ReduceScatter.cpp  RingCluster.cpp  RingCluster.hpp  Scatter.cpp
tdcf/cluster/star/: AllReduce.cpp  Broadcast.cpp  Reduce.cpp  ReduceScatter.cpp  Scatter.cpp  StarCluster.cpp  StarCluster.hpp
tdcf/command/: Command.hpp  CommandMark.hpp  Interpreter.hpp
tdcf/detail/: Command.cpp  Command.hpp  CommandMark.hpp  EventProgress.hpp  InternalEvent.cpp  InternalEvent.hpp  Message.hpp  MetaData.hpp  NodeAgent.cpp  NodeAgent.hpp  NodeInformation.cpp  NodeInformation.hpp  OperationInterpreter.hpp  Serializable.hpp  StatusFlag.hpp
tdcf/error/: error.hpp
tdcf/frame/: Cluster.hpp  Commander.hpp  Communicator.hpp  Data.hpp  Identity.hpp  Interpreter.hpp  Node.hpp  ProcessingRules.hpp  Processor.hpp  Serializable.hpp  StatusFlag.hpp  Transmitter.hpp
tdcf/handle/: CommunicatorHandle.cpp  CommunicatorHandle.hpp  Handle.hpp  ProcessorHandle.cpp  ProcessorHandle.hpp  handle.cpp
tdcf/node/: Node.cpp  Node.hpp  NodeData.hpp  StarNode.cpp  StarNode.hpp
tdcf/node/agents/: NodeAgent.cpp  NodeAgent.hpp  StarAgent.cpp  StarAgent.hpp
tdcf/node/agents/DBT/: AllReduce.cpp  Broadcast.cpp  DBTAgent.cpp  DBTAgent.hpp  Reduce.cpp  ReduceScatter.cpp  Scatter.cpp
tdcf/node/agents/ring/: AllReduce.cpp  Broadcast.cpp  Reduce.cpp  ReduceScatter.cpp  RingAgent.cpp  RingAgent.hpp  Scatter.cpp
tdcf/node/agents/star/: AllReduce.cpp  Broadcast.cpp  Reduce.cpp  ReduceScatter.cpp  Scatter.cpp  StarAgent.cpp  StarAgent.hpp
tdcf/node/nodes/: StarNode.cpp  StarNode.hpp
test/: CMakeLists.txt  Log.cpp  Log.hpp  test.cpp  test.hpp  test_main.cpp
test/DBTtest/: DBTtest.hpp
test/frame1/: Communicator1.cpp  Communicator1.hpp  ComponentCreator1.cpp  ComponentCreator1.hpp  Data1.hpp  Identity1.hpp  ProcessingRules1.hpp  Processor1.cpp  Processor1.hpp  test1.cpp
test/manager/: ComponentCreator.hpp  TestManager.cpp  TestManager.hpp
